--- a/Site/app/config/services.yml
+++ b/Site/app/config/services.yml
@@ -7,3 +7,10 @@ services:
     #service_name:
     #    class: AppBundle\Directory\ClassName
     #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+security:
+    firewalls:
+            main:
+                anonymous: ~
+                form_login:
+                    login_path: login
+                    check_path: login
