--- a/Site/app/config/services.yml
+++ b/Site/app/config/services.yml
@@ -14,3 +14,5 @@ security:
                 form_login:
                     login_path: login
                     check_path: login
+    encoders:
+            AppBundle\Entity\User: bcrypt
