--- a/Site/app/config/security.yml
+++ b/Site/app/config/security.yml
@@ -4,13 +4,13 @@ security:
     encoders:
         AppBundle\Entity\User:
             algorithm: bcrypt
-            
+
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         our_db_provider:
-                entity:
-                    class: AppBundle:User
-                    property: username
+            entity:
+                class: AppBundle:User
+                property: username
         in_memory:
             memory: ~
 
@@ -21,6 +21,10 @@ security:
             security: false
 
         main:
+            pattern:    ^/
+            http_basic: ~
+            provider: our_db_provider
+
             anonymous: ~
             # activate different ways to authenticate
 
