Finished revamping the login system

--- a/Site/app/config/security.yml
+++ b/Site/app/config/security.yml
@@ -10,7 +10,7 @@ security:
         our_db_provider:
             entity:
                 class: AppBundle:User
-                property: email
+                property: username
         in_memory:
             memory: ~
 
