--- a/Site/app/config/services.yml
+++ b/Site/app/config/services.yml
@@ -14,5 +14,8 @@ security:
                 form_login:
                     login_path: login
                     check_path: login
+                logout:
+                    path:   /logout
+                    target: /
     encoders:
             AppBundle\Entity\User: bcrypt
